opam-version: "1.2"
name: "allocine-cohttp-proxy"
version: "0.1.0"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/allocine/"
bug-reports: "https://github.com/ghuysmans/allocine/issues"
dev-repo: "git://github.com/ghuysmans/allocine/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "Cohttp proxy for Allocine.fr"
depends: [
  "dune" {build}
  "cohttp-lwt"
  "digestif"
  "base64" {>= "3.0.0"}
]
