opam-version: "1.2"
name: "allocine"
version: "0.0.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/allocine/"
bug-reports: "https://github.com/ghuysmans/allocine/issues"
dev-repo: "git://github.com/ghuysmans/allocine/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "API for Allocine.fr"
depends: [
  "dune" {build}
  "atdgen"
  "tyre"
  "calendar"
  "digestif"
  "cohttp-lwt"
  "yojson"
  "maki"
  "base64" {>= "3.0.0"}
]
